--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,6 +4,12 @@
     <meta charset="utf-8" />
     <link rel="icon" href="https://i.ibb.co/0jM83MR/Asset-5.png" />
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1" /> -->
+    <!-- <link
+      href="https://cdn.jsdelivr.net/npm/daisyui@3.0.0/dist/full.css"
+      rel="stylesheet"
+      type="text/css"
+    /> -->
+
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1"
