About Section & Meta Props

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -19,7 +19,10 @@
       name="description"
       content="Find the best products for the cheapest prices"
     />
-    <link rel="apple-touch-icon" href="https://i.ibb.co/0jM83MR/Asset-5.png" />
+    <link
+      rel="apple-touch-icon"
+      href="https://i.ibb.co/ZWCDGDn/276994740-364035949063863-3355795617466728307-n.jpg"
+    />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link
       rel="stylesheet"
@@ -122,7 +125,7 @@
       href="https://unpkg.com/img-comparison-slider@7/dist/styles.css"
     />
 
-    <title>Welcome To CreativeDuoLLC</title>
+    <title>Sweets By Karla</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
