--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,12 +3,18 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="https://i.ibb.co/0jM83MR/Asset-5.png" />
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1" /> -->
-    <!-- <link
-      href="https://cdn.jsdelivr.net/npm/daisyui@3.0.0/dist/full.css"
+
+    <link
       rel="stylesheet"
-      type="text/css"
-    /> -->
+      href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+      integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+      crossorigin=""
+    />
+    <script
+      src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+      integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+      crossorigin=""
+    ></script>
 
     <meta
       name="viewport"
@@ -32,148 +38,21 @@
       referrerpolicy="no-referrer"
     />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Galada&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lobster&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lobster&family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap"
-      rel="stylesheet"
-    />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/themify-icons/0.1.2/css/themify-icons.css"
     />
-
-    <link
-      rel="stylesheet"
-      crossorigin="anonymous"
-      href="https://npmcdn.com/flickity@2/dist/flickity.css"
-    />
-    <script
-      crossorigin="anonymous"
-      src="https://npmcdn.com/flickity@2/dist/flickity.pkgd.min.js"
-    ></script>
-
-    <!-- MailerLite Universal -->
-    <!-- <script crossorigin="anonymous">
-      (function (w, d, e, u, f, l, n) {
-        (w[f] =
-          w[f] ||
-          function () {
-            (w[f].q = w[f].q || []).push(arguments);
-          }),
-          (l = d.createElement(e)),
-          (l.async = 1),
-          (l.src = u),
-          (n = d.getElementsByTagName(e)[0]),
-          n.parentNode.insertBefore(l, n);
-      })(
-        window,
-        document,
-        "script",
-        "https://assets.mailerlite.com/js/universal.js",
-        "ml"
-      );
-      ml("account", "141996");
-    </script> -->
-    <!-- End MailerLite Universal -->
 
     <script
       src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js"
       defer
     ></script>
 
-    <!-- <script crossorigin="anonymous">
-      !(function () {
-        window;
-        var e,
-          t = document;
-        (e = function () {
-          var e = t.createElement("script");
-          (e.defer = !0),
-            (e.src =
-              "https://d2oeplw15jeq9j.cloudfront.net/widgets/widget.min.js");
-          var n = t.getElementsByTagName("script")[0];
-          n.parentNode.insertBefore(e, n),
-            (e.onload = function () {
-              NDRSL.init("634785f9fa9cdd4fd6e82f92");
-            });
-        }),
-          "interactive" === t.readyState || "complete" === t.readyState
-            ? e()
-            : t.addEventListener("DOMContentLoaded", e());
-      })();
-    </script> -->
-
-    <script
-      defer
-      src="https://unpkg.com/img-comparison-slider@7/dist/index.js"
-    ></script>
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/img-comparison-slider@7/dist/styles.css"
-    />
-
     <title>Sweets By Karla</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-
-    <!-- Start of OpenWidget (www.openwidget.com) code -->
-    <script>
-      window.__ow = window.__ow || {};
-      window.__ow.organizationId = "b006ea06-ad18-4f45-909f-5fc99f0f5740";
-      (function(n, t, c) {
-        function i(n) {
-          return e._h ? e._h.apply(null, n) : e._q.push(n);
-        }
-        var e = {
-          _q: [],
-          _h: null,
-          _v: "2.0",
-          on: function() {
-            i(["on", c.call(arguments)]);
-          },
-          once: function() {
-            i(["once", c.call(arguments)]);
-          },
-          off: function() {
-            i(["off", c.call(arguments)]);
-          },
-          get: function() {
-            if (!e._h)
-              throw new Error(
-                "[OpenWidget] You can't use getters before load."
-              );
-            return i(["get", c.call(arguments)]);
-          },
-          call: function() {
-            i(["call", c.call(arguments)]);
-          },
-          init: function() {
-            var n = t.createElement("script");
-            (n.async = !0),
-              (n.type = "text/javascript"),
-              (n.src = "https://cdn.openwidget.com/openwidget.js"),
-              t.head.appendChild(n);
-          },
-        };
-        !n.__ow.asyncInit && e.init(), (n.OpenWidget = n.OpenWidget || e);
-      })(window, document, [].slice);
-    </script>
-    <!-- End of OpenWidget code -->
     <script
       src="https://unpkg.com/@lottiefiles/jlottie@latest/dist/jlottie.min.js"
       type="module"
