--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -58,5 +58,6 @@
       type="module"
     ></script>
     <script src="https://unpkg.com/@lottiefiles/lottie-player@1.5.7/dist/lottie-player.js"></script>
+    <script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script>
   </body>
 </html>
